// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphCardChartLegend Component should handle a click event: click event, dispatch 1`] = `
[
  [
    {
      "id": "test-loremIpsum",
      "type": "SET_GRAPH_LEGEND",
      "value": "mock boolean, loremIpsum",
    },
  ],
]
`;

exports[`GraphCardChartLegend Component should handle a click event: keyPress event, dispatch 1`] = `
[
  [
    {
      "id": "test-loremIpsum",
      "type": "SET_GRAPH_LEGEND",
      "value": "mock boolean, loremIpsum",
    },
  ],
]
`;

exports[`GraphCardChartLegend Component should handle variations in data when returning legend items: legend items, data, threshold 1`] = `
<Fragment>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_loremIpsum, {"product":"test","context":"test"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-loremIpsum"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill="#000000"
          size="sm"
          style={
            {
              "visibility": "visible",
            }
          }
          symbol="square"
          title={null}
        />
      }
      isDisabled={false}
      key="curiosity-button-loremIpsum"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_loremIpsum,curiosity-graph.label_no], {"product":"test","context":"test"})
    </Button>
  </Tooltip>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_threshold_dolorSit, {"product":"test","context":"test"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-dolorSit"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill="#ff0000"
          size="sm"
          style={
            {
              "visibility": "visible",
            }
          }
          symbol="dash"
          title={null}
        />
      }
      isDisabled={false}
      key="curiosity-button-dolorSit"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_threshold,curiosity-graph.label_no], {"product":"test","context":"test"})
    </Button>
  </Tooltip>
</Fragment>
`;

exports[`GraphCardChartLegend Component should render a basic component: basic 1`] = `
<Fragment>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_loremIpsum, {"product":"dolorSit","context":"dolorSit"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-loremIpsum"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill="#000000"
          size="sm"
          style={
            {
              "visibility": "visible",
            }
          }
          symbol="square"
          title={null}
        />
      }
      isDisabled={false}
      key="curiosity-button-loremIpsum"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_loremIpsum,curiosity-graph.label_no], {"product":"dolorSit","context":"dolorSit"})
    </Button>
  </Tooltip>
</Fragment>
`;

exports[`GraphCardChartLegend Component should render basic data: data 1`] = `
<Fragment>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_loremIpsum, {"product":"test","context":"test"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-loremIpsum"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill="#000000"
          size="sm"
          style={
            {
              "visibility": "visible",
            }
          }
          symbol="square"
          title={null}
        />
      }
      isDisabled={false}
      key="curiosity-button-loremIpsum"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_loremIpsum,curiosity-graph.label_no], {"product":"test","context":"test"})
    </Button>
  </Tooltip>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_ametConsectetur, {"product":"test","context":"test"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-ametConsectetur"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill={null}
          size="sm"
          symbol="eyeSlash"
          title={null}
        />
      }
      isDisabled={true}
      key="curiosity-button-ametConsectetur"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_ametConsectetur,curiosity-graph.label_no], {"product":"test","context":"test"})
    </Button>
  </Tooltip>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_threshold_dolorSit, {"product":"test","context":"test"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-dolorSit"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill="#ff0000"
          size="sm"
          style={
            {
              "visibility": "visible",
            }
          }
          symbol="dash"
          title={null}
        />
      }
      isDisabled={false}
      key="curiosity-button-dolorSit"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_threshold,curiosity-graph.label_no], {"product":"test","context":"test"})
    </Button>
  </Tooltip>
  <Tooltip
    content={
      <p>
        t(curiosity-graph.legendTooltip_threshold_nonCursus, {"product":"test","context":"test"}, [object Object])
      </p>
    }
    distance={5}
    enableFlip={true}
    key="curiosity-tooltip-nonCursus"
    position="top"
  >
    <Button
      className="curiosity-usage-graph__legend-item"
      component="a"
      icon={
        <ChartIcon
          fill="#ff0000"
          size="sm"
          style={
            {
              "visibility": "visible",
            }
          }
          symbol="dash"
          title={null}
        />
      }
      isDisabled={false}
      key="curiosity-button-nonCursus"
      onClick={[Function]}
      onKeyPress={[Function]}
      tabIndex={0}
      variant="link"
    >
      t([curiosity-graph.label_threshold,curiosity-graph.label_no], {"product":"test","context":"test"})
    </Button>
  </Tooltip>
</Fragment>
`;
